#25 Create sending mails without emailJS, only with server side (#36)
* feat: #25 Create sending mails without emailJS, only with server side

* GF-25/Create sending mails without emailJS, only with server side
